[project]
name = "chatterbox-tts-server"
version = "1.0.0"
description = "FastAPI-based TTS server powered by Chatterbox TTS"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Deep Learning Framework
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",

    # Core TTS
    "chatterbox-tts @ git+https://github.com/devnen/chatterbox-v2.git@master",

    # Web Framework & Server
    "fastapi",
    "uvicorn[standard]",

    # Scientific Computing & ML
    "numpy>=1.24.0",
    "librosa",
    "safetensors",

    # Audio I/O & Processing
    "soundfile",
    "pydub",
    "audiotsm",
    "praat-parselmouth",

    # Web & API Utilities
    "python-multipart",
    "requests",
    "jinja2",
    "aiofiles",
    "hf_transfer",

    # Configuration & Data Processing
    "pyyaml",
    "watchdog",
    "unidecode",
    "inflect",
    "tqdm",
]

[tool.uv]
index-strategy = "unsafe-best-match"
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
